--- a/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
@@ -77,6 +77,7 @@
                 <input type="submit" value="Create new" onclick="setSubmitValue(3)" />
             </td>
         </tr>
+        <tr><td><input type="submit" value="View all group applicants" onclick="setSubmitValue(11)" /></td></tr>
     </table>
 </fieldset>
 
