--- a/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
@@ -10,6 +10,7 @@
 @using CalendarApplication.Models.Maintenance;
 
 <script src="@Url.Content("~/Scripts/calendar-script.js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/calendar-script-select-extn-" + (Request.Browser.IsMobileDevice?"touch":"mouse") + ".js?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" type="text/javascript"></script>
 <link href="@Url.Content("~/Content/Calendar.css?" + CalendarApplication.Models.Maintenance.Config.GetVersion())" rel="stylesheet" type="text/css" />
 
 <h3 style="color:red">@TempData["errorMsg"]</h3>
