--- a/CalendarApplication/CalendarApplication/Content/Calendar.css
+++ b/CalendarApplication/CalendarApplication/Content/Calendar.css
@@ -38,6 +38,7 @@ table.event-popup {
     background-color:#EBEBEB;
     border:solid 1px black;
     border-collapse:collapse;
+    width:200px;
 }
 table.event-popup td {
     padding:0;
