--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -27,22 +27,16 @@
         Please note that many functions on this website require JavaScript and your browser does not support it.
         You will need a JavaScript-enabled browser to use this site.
     </noscript>
-    <table class="layout-style-basic">
-        <tr class="account-header">
-            <th style="text-align:right">
-                @Html.Partial("_LoginPartial")
-            </th>
-        </tr>
-        <tr class="nav-header" >
-            <th>
-                @Html.Partial("_MenuPartial")
-            </th>
-        </tr>
-        <tr>
-            <td class="layout-body">
-                @RenderBody()
-            </td>
-        </tr>
-    </table>
+    <div class="header">
+        <div class="account-header">
+            @Html.Partial("_LoginPartial")
+        </div>
+        <div class="nav-header">
+            @Html.Partial("_MenuPartial")
+        </div>
+    </div>
+    <div class="layout-body">
+        @RenderBody()
+    </div>
 </body>
 </html>
