added restriction for length in room description when non user tries to access user index, is now sent to login instead of home/index added some comments to databasetest and stringlist model fixed bug with string lists not removing a particular string

--- a/CalendarApplication/CalendarApplication/Views/Event/StringListPartial.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/StringListPartial.cshtml
@@ -9,4 +9,4 @@
         "[" + Model.Place + "].Active")' value='true'>
     <input type='hidden' id='@(Model.ViewID + "_" + Model.Place)_ID' name='@(Model.ViewName +
             "[" + Model.Place + "].ID")' value='-1'>
-    <input type='button' value='Remove' onclick="removeStringListField('@(Model.ViewID + "_" + Model.Place)'; setState();)" />
+    <input type='button' value='Remove' onclick="removeStringListField('@(Model.ViewID + "_" + Model.Place)'); setState();" />
