--- a/CalendarApplication/CalendarApplication/Views/Event/PrintEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/PrintEvent.cshtml
@@ -120,23 +120,23 @@
                                         case Fieldtype.User:
                                         case Fieldtype.Group:
                                         case Fieldtype.Text:        @fm.StringValue break;
-                                        case Fieldtype.File:        @fm.IntValue break;
+                                        case Fieldtype.File:        @fm.File.CurrentFileName break;
                                         case Fieldtype.Datetime:    @fm.DateValue break;
                                         case Fieldtype.Bool:        <img src="@Url.Content("~/Content/images/" + (fm.BoolValue ? "ok.png" : "error.png"))" width="22" height="22"/> break;
                                         case Fieldtype.UserList:
                                         case Fieldtype.GroupList:   for (int i = 0; i < fm.List.Count(); i++)
                                                                     {
-                                                                        @(fm.List[i].Text + (i != fm.List.Count() - 1 ? ", " : ""))
+                                                                        @(fm.List[i].Text + (i != fm.List.Count() - 1 ? " ; " : ""))
                                                                     }
                                                                     break;
-                                        case Fieldtype.FileList:    for (int i = 0; i < fm.List.Count(); i++)
+                                        case Fieldtype.FileList:    for (int i = 0; i < fm.FileList.Count; i++)
                                                                     {
-                                                                        @(fm.IntValue + (i != fm.List.Count() - 1 ? ", " : ""))
+                                                                        @(fm.FileList[i].CurrentFileName + (i != fm.List.Count - 1 ? " ; " : ""))
                                                                     }
                                                                     break;
                                         case Fieldtype.TextList:    for (int i = 0; i < fm.StringList.Count(); i++)
                                                                     {
-                                                                        @(fm.StringList[i].Text + (i != fm.StringList.Count() - 1 ? ", " : ""))
+                                                                        @(fm.StringList[i].Text + (i != fm.StringList.Count() - 1 ? " ; " : ""))
                                                                     }
                                                                     break;
                                     }
