users can now view files they have uploaded from a link in their profile view admins can view these for all users, others can only view their own
added a view in maintenance for admins to find files not tied to any events

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
@@ -105,4 +105,9 @@
         </tr>
     </table>
 </fieldset>
+<fieldset>
+    <legend>Files</legend>
+    @Html.ActionLink("View loose files","LooseFiles","Maintenance",null,null)
+</fieldset>
+
 }
